<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weight_label"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editWeight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/weight_hint"
        android:autofillHints="weight"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewWeight"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textViewHeight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/height_label"
        android:padding="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editWeight" />

    <EditText
        android:id="@+id/editHeight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/height_hint"
        android:autofillHints="height"
        tools:ignore="MissingConstraints"

        app:layout_constraintTop_toBottomOf="@id/textViewWeight"
        app:layout_constraintStart_toEndOf="@+id/textViewWeight"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/imc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/imc_label"
        android:textAppearance="?attr/textAppearanceBodyLarge"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/editHeight"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/imcResult"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_0_0"
        android:textAppearance="?attr/textAppearanceBodyLarge"
        android:textStyle="bold"
        android:padding="16dp"
        app:layout_constraintLeft_toRightOf="@id/imc"
        app:layout_constraintTop_toBottomOf="@id/editHeight"/>

    <Button
        android:id="@+id/calculateButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/calcular"
        app:layout_constraintLeft_toRightOf="@id/imcResult"
        app:layout_constraintTop_toBottomOf="@id/imcResult" />

</androidx.constraintlayout.widget.ConstraintLayout>